# ai-systems-engineer-career

./: .gitignore  README.md
phase-0-foundations/: README.md  posts.md
phase-0-foundations/code/: 1-python-refresh.py
phase-0-foundations/code/async-demo/: README.md  main.py  pyproject.toml
