[project]
name = "async-demo"
version = "0.1.0"
description = "Practicing asychronous call"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]

[tool.ruff]
lint.extend-select = ["ANN"]

[tool.mypy]
strict = true